--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lottie-react": "^2.4.1",
     "motion": "^12.4.3",
     "prettier": "^3.5.0",
+    "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
