--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-syntax-highlighter": "^15.6.1",
