--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "@tabler/icons-react": "^3.30.0",
     "@tailwindcss/vite": "^4.0.6",
     "bun": "^1.2.2",
