--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "motion": "^12.4.3",
     "prettier": "^3.5.0",
     "prismjs": "^1.30.0",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
